force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/Negoptim__Supplier_PG_Mapping__c.object-meta.xml
<CustomObject>
    <label>DA Fournisseur Mapping</label>
    <nameField>
        <label>PG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DA Fournisseur Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>