force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Actives_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Actives_Taxes_New__c</fullName>
    <label>Actives Taxes New</label>
    <length>200</length>
    <type>Text</type>
</CustomField>