force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Brand__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Negoptim__Brand__c</referenceTo>
    <relationshipLabel>DA Fournisseur Mapping</relationshipLabel>
    <relationshipName>Supplier_PG_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>