force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__BU__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__BU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>BU__c : La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre.</errorMessage>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Related_Client__c</field>
            <operation>equals</operation>
            <valueField>$Source.Negoptim__Supplier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipLabel>DA Fournisseur Mapping</relationshipLabel>
    <relationshipName>Supplier_PG_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>