force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__CostPrice_Rounding_Level__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CostPrice_Rounding_Level__c</fullName>
    <label>CostPrice Rounding Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Rounding_Level</valueSetName>
    </valueSet>
</CustomField>