force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Department__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Negoptim__Orga_HE__c</referenceTo>
    <relationshipLabel>DA Fournisseur Mapping (Department)</relationshipLabel>
    <relationshipName>Supplier_PG_Mapping_Department</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>