force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__EAN__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__EAN__c</fullName>
    <formula>Negoptim__Product__r.Negoptim__Product_EAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EAN</label>
    <type>Text</type>
</CustomField>