force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ext Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>