force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Extraction_id_Last__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Extraction_id_Last__c</fullName>
    <label>Extraction id Last</label>
    <length>25</length>
    <type>Text</type>
</CustomField>