force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Extraction_Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Extraction_Status__c</fullName>
    <label>Extraction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extract</fullName>
            </value>
            <value>
                <fullName>Extracted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>