force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Integration_Date_Last__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Integration_Date_Last__c</fullName>
    <label>Integration Date Last</label>
    <type>Date</type>
</CustomField>