force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Last_Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Last_Discount_Price__c</fullName>
    <label>Last Discount Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>