force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Last_Net_Price_Update__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Last_Net_Price_Update__c</fullName>
    <label>Last Net Price Update</label>
    <type>Date</type>
</CustomField>