force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Last_Product_Tax_Update__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Last_Product_Tax_Update__c</fullName>
    <label>Last Product Tax Update</label>
    <type>Date</type>
</CustomField>