force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Last_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Last_Unit_Cost__c</fullName>
    <formula>Negoptim__Product__r.Negoptim__Last_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Unit Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>