force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__PG_Ext_Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PG_Ext_Code__c</fullName>
    <externalId>true</externalId>
    <label>PG Ext Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>