force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Product__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>DA Fournisseur Mapping</relationshipLabel>
    <relationshipName>Supplier_PG_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>