force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Rounding_Method__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Rounding_Method__c</fullName>
    <label>Rounding Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Rounding_Method</valueSetName>
    </valueSet>
</CustomField>