force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Synchro_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Synchro_Data_Source__c</fullName>
    <label>Synchro Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Negoptim__Synchro_Data_Source</valueSetName>
    </valueSet>
</CustomField>