force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__TarifCost_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__TarifCost_Date__c</fullName>
    <label>TarifCost Exec. Date</label>
    <type>Date</type>
</CustomField>