force-app/main/default/objects/Negoptim__Supplier_PG_Mapping__c/fields/Negoptim__Total_Taxes_New__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Total_Taxes_New__c</fullName>
    <formula>Negoptim__Tax_1_New__c + 
Negoptim__Tax_2_New__c +
Negoptim__Tax_3_New__c +
Negoptim__Tax_4_New__c + 
Negoptim__Tax_5_New__c +
Negoptim__Tax_6_New__c +
Negoptim__Tax_7_New__c + 
Negoptim__Tax_8_New__c +
Negoptim__Tax_9_New__c +
Negoptim__Tax_10_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Taxes New</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>